# nanotest

./: .gitignore  AGENTS.md  ARCHITECTURE_REDESIGN.md  README.md  USER_MANUAL.md  add_future_annotations.py  pyproject.toml  start-all.sh  stop-all.sh
apps/backend/: .env.example  requirements.txt  start-all.ps1  start-worker.ps1  start.ps1  test_vision_api.py  test_wifi_device.py
apps/backend/app/: main.py
apps/backend/app/core/: __init__.py  config.py  database.py  events.py  security.py
apps/backend/app/domain/: models.py
apps/backend/app/repositories/: base.py  project_repository.py  test_case_repository.py  test_run_repository.py
apps/backend/app/schemas/: schemas.py
apps/backend/app/services/: __init__.py  ai_service.py  auth_service.py  comparison_service.py  package_parser.py  package_service.py  project_service.py  risk_engine.py  test_case_service.py  test_flow_service.py  test_run_service.py
apps/backend/app/tasks/: __init__.py  analysis.py  celery_app.py  execution.py  reports.py
apps/backend/migrations/: env.py
apps/backend/migrations/versions/: 000_init_schema.py  001_add_app_packages.py  (+4 more)
apps/backend/scripts/: seed.py
apps/backend/tests/: conftest.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  index.css
apps/worker/runners/: __init__.py  appium_runner.py  base.py  flow_runner.py  text_generators.py
examples/: login_flow.yaml
src/nanotest/: __init__.py  ai.py  cli.py  collector.py  dashboard.py  dsl.py  engine.py  models.py  pipeline.py  regression.py  reporting.py
tests/: test_pipeline.py
(+49 files in other folders)
